--- a/WebApplication15/Views/Home/Index.cshtml
+++ b/WebApplication15/Views/Home/Index.cshtml
@@ -20,8 +20,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-10 offset-md-1">
-                            <h4>Let's travel the world with us</h4>
-                            <h1>Explore The World With <span>Travol</span></h1>
+                            <h1>@_localization.GetKey("Dünyayı keşfet").Value <span>@_localization.GetKey("Seyahatlerimizle").Value</span></h1>
                         </div>
                     </div>
                 </div>
@@ -36,20 +35,20 @@
             <div class="row">
                 <div class="col-md-6 mb-30 animate-box" data-animate-effect="fadeInUp">
                     <div class="section-subtitle">The best travel agency</div>
-                    <div class="section-title">Discover the <span>world</span> with our guide</div>
-                    <p>You can choose any country with good tourism. Agency elementum sesue the aucan vestibulum aliquam justo in sapien rutrum volutpat. Donec in quis the pellentesque velit. Donec id velit ac arcu posuere blane.</p>
+                    <div class="section-title">@_localization.GetKey("Dünyayı").Value <span>@_localization.GetKey("Keşfet1").Value</span> @_localization.GetKey("Bizim rehberliğimizle").Value</div>
+                    <p>@_localization.GetKey("Turizmi iyi olan herhangi bir ülkeyi seçebilirsiniz. Ajans unsuru, sapien rutrum volutpat'taki aucan vestibulum aliquam justo'yu sese ediyor. Donec in quis the pellentesque velit. Donec id velit accu posuere blane").Value</p>
                     <p>Hotel ut nisl quam nestibulum ac quam nec odio elementum ceisue the miss varius natoque penatibus et magnis dis parturient monte.</p>
                     <ul class="list-unstyled about-list mb-30">
                         <li>
                             <div class="about-list-icon"> <span class="ti-check"></span> </div>
                             <div class="about-list-text">
-                                <p>20 Years of Experience</p>
+                                <p>@_localization.GetKey("20 Yıl deneyim").Value</p>
                             </div>
                         </li>
                         <li>
                             <div class="about-list-icon"> <span class="ti-check"></span> </div>
                             <div class="about-list-text">
-                                <p>150+ Tour Destinations</p>
+                                <p>@_localization.GetKey("150 den fazla tur seçeneği").Value</p>
                             </div>
                         </li>
                     </ul>
@@ -57,7 +56,7 @@
                     <div class="phone-call mb-30">
                         <div class="icon"><span class="flaticon-phone-call"></span></div>
                         <div class="text">
-                            <p>For information</p> <a href="tel:855-333-4444">855 333 4444</a>
+                            <p>@_localization.GetKey("Bilgi için").Value</p> <a href="tel:855-333-4444">855 333 4444</a>
                         </div>
                     </div>
                 </div>
@@ -90,8 +89,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <div class="section-subtitle"><span>Choose your place</span></div>
-                    <div class="section-title">Popular <span>Tours</span></div>
+                    <div class="section-subtitle"><span>@_localization.GetKey("Tatil yerini seç").Value</span></div>
+                    <div class="section-title">Popular <span>@_localization.GetKey("Turlar").Value</span></div>
                 </div>
             </div>
             <div class="row">
@@ -102,12 +101,12 @@
                             <div class="rating"> <i class="star active"></i> <i class="star active"></i> <i class="star active"></i> <i class="star active"></i> <i class="star"></i>
                                 <div class="reviews-count">(2 Reviews)</div>
                             </div>
-                            <h5><a href="ucak-detay.html">Maldives Tour</a></h5>
+                            <h5><a href="ucak-detay.html">@_localization.GetKey("Maldiv turu").Value</a></h5>
                             <div class="line"></div>
                             <div class="row facilities">
                                 <div class="col col-md-12">
                                     <ul>
-                                        <li><i class="ti-time"></i> 10 Days</li>
+                                        <li><i class="ti-time"></i> @_localization.GetKey("10 Gün").Value</li>
                                         <li><i class="ti-user"></i> 12+</li>
                                         <li><i class="ti-location-pin"></i> Maldives</li>
                                     </ul>
@@ -120,14 +119,14 @@
                     <div class="item">
                         <div class="position-re o-hidden"><img src="img/tours/italy1.jpg" alt=""></div> <span class="category"><a href="#0">$1.300</a></span>
                         <div class="con">
-                            <h5><a href="ucak-detay.html">Italy Tour</a> </h5>
+                            <h5><a href="ucak-detay.html">@_localization.GetKey("İtalya turu").Value</a> </h5>
                             <div class="line"></div>
                             <div class="row facilities">
                                 <div class="col col-md-12">
                                     <ul>
-                                        <li><i class="ti-time"></i> 6 Days</li>
+                                        <li><i class="ti-time"></i> @_localization.GetKey("10 Gün").Value</li>
                                         <li><i class="ti-user"></i> 10+</li>
-                                        <li><i class="ti-location-pin"></i> Italy</li>
+                                        <li><i class="ti-location-pin"></i> @_localization.GetKey("İtalya").Value</li>
                                     </ul>
                                 </div>
                             </div>
@@ -138,14 +137,14 @@
                     <div class="item">
                         <div class="position-re o-hidden"><img src="img/tours/france1.jpg" alt=""></div> <span class="category"><a href="#0">$400</a></span>
                         <div class="con">
-                            <h5><a href="ucak-detay.html">France Tour</a> </h5>
+                            <h5><a href="ucak-detay.html">@_localization.GetKey("Fransa").Value @_localization.GetKey("Tur").Value</a> </h5>
                             <div class="line"></div>
                             <div class="row facilities">
                                 <div class="col col-md-12">
                                     <ul>
-                                        <li><i class="ti-time"></i> 10 Days</li>
+                                        <li><i class="ti-time"></i> @_localization.GetKey("10 Gün").Value</li>
                                         <li><i class="ti-user"></i> 6+</li>
-                                        <li><i class="ti-location-pin"></i> France</li>
+                                        <li><i class="ti-location-pin"></i> @_localization.GetKey("Fransa").Value</li>
                                     </ul>
                                 </div>
                             </div>
@@ -156,14 +155,14 @@
                     <div class="item">
                         <div class="position-re o-hidden"><img src="img/tours/greece1.jpg" alt=""></div> <span class="category"><a href="#">$500</a></span>
                         <div class="con">
-                            <h5><a href="ucak-detay.html">Greece Tour</a> </h5>
+                            <h5><a href="ucak-detay.html">@_localization.GetKey("Yunanistan").Value @_localization.GetKey("Tur").Value</a> </h5>
                             <div class="line"></div>
                             <div class="row facilities">
                                 <div class="col col-md-12">
                                     <ul>
-                                        <li><i class="ti-time"></i> 10 Days</li>
+                                        <li><i class="ti-time"></i> @_localization.GetKey("10 Gün").Value</li>
                                         <li><i class="ti-user"></i> 12+</li>
-                                        <li><i class="ti-location-pin"></i> Greece</li>
+                                        <li><i class="ti-location-pin"></i> @_localization.GetKey("Yunanistan").Value</li>
                                     </ul>
                                 </div>
                             </div>
@@ -174,14 +173,14 @@
                     <div class="item">
                         <div class="position-re o-hidden"><img src="img/tours/canada1.jpg" alt=""></div> <span class="category"><a href="#0">$300</a></span>
                         <div class="con">
-                            <h5><a href="ucak-detay.html">Canada Tour</a></h5>
+                            <h5><a href="ucak-detay.html">@_localization.GetKey("Kanada").Value @_localization.GetKey("Tur").Value</a></h5>
                             <div class="line"></div>
                             <div class="row facilities">
                                 <div class="col col-md-12">
                                     <ul>
-                                        <li><i class="ti-time"></i> 7 Days</li>
+                                        <li><i class="ti-time"></i> 7 @_localization.GetKey("Gün").Value</li>
                                         <li><i class="ti-user"></i> 10+</li>
-                                        <li><i class="ti-location-pin"></i> Canada</li>
+                                        <li><i class="ti-location-pin"></i> @_localization.GetKey("Kanada").Value</li>
                                     </ul>
                                 </div>
                             </div>
@@ -242,7 +241,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="section-subtitle">Top Destination</div>
-                    <div class="section-title">Popular <span>Destination</span></div>
+                    <div class="section-title">@_localization.GetKey("Popüler").Value <span>@_localization.GetKey("Yerler").Value</span></div>
                 </div>
             </div>
             <div class="row">
@@ -251,7 +250,7 @@
                         <div class="item">
                             <div class="position-re o-hidden"><img src="img/destination/maldives1.jpg" alt=""></div> <span class="category"><a href="#0">New</a></span>
                             <div class="con">
-                                <h5><a href="ucak-detay.html"><i class="ti-location-pin"></i> Maldives</a></h5>
+                                <h5><a href="ucak-detay.html"><i class="ti-location-pin"></i> @_localization.GetKey("Maldivler").Value</a></h5>
                                 <div class="line"></div>
                                 <div class="row facilities">
                                     <div class="col col-md-8">
@@ -266,7 +265,7 @@
                         <div class="item">
                             <div class="position-re o-hidden"> <img src="img/destination/canada1.jpg" alt=""> </div> <span class="category"><a href="#0">25% OFF</a></span>
                             <div class="con">
-                                <h5><a href="ucak-detay.html"><i class="ti-location-pin"></i> Canada</a></h5>
+                                <h5><a href="ucak-detay.html"><i class="ti-location-pin"></i> @_localization.GetKey("Kanada").Value</a></h5>
                                 <div class="line"></div>
                                 <div class="row facilities">
                                     <div class="col col-md-8">
@@ -281,7 +280,7 @@
                         <div class="item">
                             <div class="position-re o-hidden"><img src="img/destination/italy1.jpg" alt=""></div> <span class="category"><a href="#0">7 Tours</a></span>
                             <div class="con">
-                                <h5><a href="#0"><i class="ti-location-pin"></i> Italy</a></h5>
+                                <h5><a href="#0"><i class="ti-location-pin"></i> @_localization.GetKey("İtalya").Value</a></h5>
                                 <div class="line"></div>
                                 <div class="row facilities">
                                     <div class="col col-md-8">
