--- a/WebApplication15/Views/_ViewImports.cshtml
+++ b/WebApplication15/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using WebApplication15
 @using WebApplication15.Models
+@using WebApplication15.Services;
+@inject LanguageService _localization;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
